--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,3 @@
-
-//apply plugin: 'maven'
-//apply plugin: 'io.spring.dependency-management'
-
-
 buildscript {
     ext {
         springBootVersion = '2.0.1.RELEASE'
@@ -17,6 +12,7 @@ buildscript {
 }
 
 
+
 plugins {
     id 'java'
     id "org.springframework.boot" version "2.0.1.RELEASE"
@@ -26,33 +22,7 @@ group 'me.weixler'
 version '1.0-SNAPSHOT'
 apply plugin: 'org.springframework.boot'
 
-//apply plugin: 'org.springframework.boot'
 sourceCompatibility = 1.8
-
-//springBoot {
-//    executable = true
-//}
-
-//buildscript {
-//    ext {
-//        springBootVersion = '1.5.8.RELEASE'
-//    }
-//    repositories {
-//        mavenCentral()
-//    }
-//    dependencies {
-//        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-//    }
-//}
-//
-//springBoot {
-//    executable = true
-//}
-//
-//jar{
-//    baseName = 'myapp'
-//    version = 'version'
-//}
 
 repositories {
     mavenCentral()
@@ -61,10 +31,15 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'com.pi4j', name: 'pi4j-core', version: '1.1'
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.0.4.RELEASE'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.0.4.RELEASE'
 //    compile 'io.spring.gradle:dependency-management-plugin:1.0.6.RELEASE'
 //    id "org.springframework.boot" version "2.0.1.RELEASE"
+    compile("com.graphql-java:graphql-spring-boot-starter:5.0.2")
+    compile("com.graphql-java:graphiql-spring-boot-starter:5.0.2")
+    compile("com.graphql-java:graphql-java-tools:5.2.3")
+    compile("org.springframework.boot:spring-boot-starter-web:2.0.4.RELEASE")
+    testCompile("org.springframework.boot:spring-boot-starter-test:2.0.4.RELEASE")
+    testCompile("com.graphql-java:graphql-spring-boot-starter-test:5.0.2")
 }
 
 
@@ -82,9 +57,7 @@ jar {
     }
 }
 
-//bootJar {
-//    manifest {
-//        attributes 'Start-Class': 'com.example.ExampleApplication'
-//    }
-//}
 
+task buildAll(type: Exec) {
+    commandLine './build-react.sh' || true
+}
