--- a/build.gradle
+++ b/build.gradle
@@ -34,12 +34,14 @@ dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.0.4.RELEASE'
 //    compile 'io.spring.gradle:dependency-management-plugin:1.0.6.RELEASE'
 //    id "org.springframework.boot" version "2.0.1.RELEASE"
+    compile("org.hibernate:hibernate-core:5.3.6.Final")
     compile("com.graphql-java:graphql-spring-boot-starter:5.0.2")
     compile("com.graphql-java:graphiql-spring-boot-starter:5.0.2")
     compile("com.graphql-java:graphql-java-tools:5.2.3")
     compile("org.springframework.boot:spring-boot-starter-web:2.0.4.RELEASE")
     testCompile("org.springframework.boot:spring-boot-starter-test:2.0.4.RELEASE")
     testCompile("com.graphql-java:graphql-spring-boot-starter-test:5.0.2")
+    testCompile("org.apache.derby:derby:10.5.3.0")
 }
 
 
