--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 # Enabling H2 Console
 spring.h2.console.enabled=true
 #Turn Statistics on
-spring.jpa.properties.hibernate.generate_statistics=true
-logging.level.org.hibernate.stat=debug
+spring.jpa.properties.hibernate.generate_statistics=false
+logging.level.org.hibernate.stat=info
 # Show all queries
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.type=trace
+logging.level.org.hibernate.type=info
 spring.datasource.url=jdbc:h2:file:~/test2;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
 spring.datasource.username=admin
 spring.datasource.password=password
