--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-router-dom": "4.3.1",
+    "@types/reactstrap": "6.4.2",
     "react": "16.6.0",
     "react-dom": "16.6.0",
+    "react-redux": "5.1.0",
+    "react-router-dom": "4.3.1",
+    "react-scripts": "2.0.5",
     "react-scripts-ts": "4.0.8",
     "reactstrap": "6.5.0",
-    "react-scripts": "2.0.5"
+    "redux": "4.0.1"
   },
   "scripts": {
     "start": "react-scripts-ts start",
