--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ logging.level.org.hibernate.stat=info
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type=info
-spring.datasource.url=jdbc:h2:file:~/test2;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
+spring.datasource.url=jdbc:h2:file:~/HeizungsPi;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
 spring.datasource.username=admin
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.h2.Driver
