--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,11 @@
 buildscript {
-    ext {
-        springBootVersion = '2.0.1.RELEASE'
-    }
     repositories {
         mavenCentral()
     }
     dependencies {
-        classpath(
-                "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.1.RELEASE")
     }
 }
-
 
 
 plugins {
@@ -29,31 +24,17 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile group: 'com.pi4j', name: 'pi4j-core', version: '1.1'
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.0.4.RELEASE'
-    compile("org.hibernate:hibernate-core:5.3.6.Final")
-    compile "org.springframework.boot:spring-boot-starter-data-jpa:2.0.4.RELEASE"
+    compile "com.pi4j:pi4j-core:1.1"
     compile "com.h2database:h2:1.4.197"
-    compile("com.graphql-java:graphql-spring-boot-starter:5.0.2")
-    compile("com.graphql-java:graphiql-spring-boot-starter:5.0.2")
-    compile("com.graphql-java:graphql-java-tools:5.2.3")
-    compile("org.springframework.boot:spring-boot-starter-web:2.0.4.RELEASE")
-    testCompile("org.springframework.boot:spring-boot-starter-test:2.0.4.RELEASE")
-    testCompile("com.graphql-java:graphql-spring-boot-starter-test:5.0.2")
-}
-
-
-
-jar {
-    baseName = 'Heizung'
-    version = '0.1'
-    manifest {
-        attributes(
-                'Main-Class': 'hello.Application'
-        )
-    }
-    from {
-        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-    }
+    compile "javax.xml.bind:jaxb-api:2.3.0"
+    compile "org.hibernate:hibernate-core:5.3.6.Final"
+    compile "com.graphql-java:graphql-java-tools:5.2.3"
+    compile "com.graphql-java:graphql-spring-boot-starter:5.0.2"
+    compile "com.graphql-java:graphiql-spring-boot-starter:5.0.2"
+    compile "org.springframework.boot:spring-boot-starter-web:2.0.4.RELEASE"
+    compile "org.springframework.boot:spring-boot-starter-data-jpa:2.0.4.RELEASE"
+    compile "org.springframework.boot:spring-boot-starter-thymeleaf:2.0.4.RELEASE"
+    testCompile "junit:junit:4.12"
+    testCompile "org.springframework.boot:spring-boot-starter-test:2.0.4.RELEASE"
+    testCompile "com.graphql-java:graphql-spring-boot-starter-test:5.0.2"
 }
