--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -1,12 +1,17 @@
 {
-  "name": "my-app",
+  "name": "HeizungsPi",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "1.2.12",
+    "@fortawesome/free-brands-svg-icons": "5.6.3",
+    "@fortawesome/free-regular-svg-icons": "5.6.3",
+    "@fortawesome/free-solid-svg-icons": "5.6.3",
+    "@fortawesome/react-fontawesome": "0.1.3",
     "@types/react-router-dom": "4.3.1",
     "@types/reactstrap": "6.4.2",
-    "@types/toastr": "^2.1.35",
-    "react": "16.6.0",
+    "@types/toastr": "2.1.35",
+    "react": "16.7.0",
     "react-dom": "16.6.0",
     "react-redux": "5.1.0",
     "react-router-dom": "4.3.1",
