--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,11 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+server.port: 9000
+
+#https
+server.ssl.key-store: classpath:keystore.p12
+server.ssl.key-store-password: raspberry
+server.ssl.keyStoreType: PKCS12
+server.ssl.keyAlias: tomcat
