--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -11,7 +11,7 @@
 
 # misc
 .DS_Store
-.env.local
+.env.development
 .env.development.local
 .env.test.local
 .env.production.local
@@ -19,3 +19,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+/.next/
+/out/
+/package-lock.json
+/yarn.lock
