--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
+.idea/
 /backend/node_modules/
-/backend/dist/
-/backend/package-lock.json
 /backend/yarn.lock
-.idea
+/backend/heatingpi.log.txt.gz
