--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,15 +14,15 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "graphql": "^15.4.0",
-    "next": "10.0.4",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "next": "12.2.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-toastify": "^6.2.0",
     "reactstrap": "^8.8.1"
   },
   "devDependencies": {
-    "@types/node": "^14.14.19",
-    "@types/react": "^17.0.0",
-    "typescript": "^4.1.3"
+    "@types/node": "18.7.5",
+    "@types/react": "18.0.17",
+    "typescript": "4.7.4"
   }
 }
